--- a/006.html
+++ b/006.html
@@ -75,19 +75,17 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4500002024101709151</div></li>
+                    <div class="detail-value " id="reqNo">A4100002024103109151</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">广西壮族自治区,广东省</div></li>
+				<div class="detail-value " id="passDists">河南省,河北省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年10月18日20时27分至 2024年10月31日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年11月01日20时27分至 2024年11月30日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广西壮族自治区</span>:钦南区汇聚建材有限公司--G325--那丽收费站--G75兰
-海高速--桂粤界；<br><hr>
-<span id="pro">广东省</span>:粤桂界--G75兰海高速--湛江收费站--湛江大
-道--江南绿都花园<br><hr></div></li>
+<span id="pro">河南省</span>:南乐收费站--G45大广高速--豫冀界；<br><hr>
+<span id="pro">河北省</span>:冀豫界--G45大广高速--S3700津雄高速--雄县收费站--S042--雄县道口村布料批发市场<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -100,7 +98,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">挖机</div></li>
+                    <div class="detail-value " id="cargoInfo">铲车</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">43.45吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
@@ -136,8 +134,8 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
-广西壮族自治区：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-广东省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+河南省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+河北省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
