--- a/006.html
+++ b/006.html
@@ -75,17 +75,17 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4200002024112509151</div></li>
+                    <div class="detail-value " id="reqNo">A4400002024112709151</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">湖北省,湖南省</div></li>
+				<div class="detail-value " id="passDists">广东省,福建省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年11月27日21时27分至 2024年12月05日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年11月29日21时27分至 2024年12月10日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">湖北省</span>:洪湖市石俱进建材有限公司--S103--新滩收费站--S13武监高速--S43孝洪高速--S78蕲嘉高速--G0422武深高速--鄂湘界；<br><hr>
-<span id="pro">湖南省</span>:湘鄂界--G0422武深高速--江南收费站<br><hr></div></li>
+<span id="pro">广东省</span>:宏诚石油加油站(枫朗站)--X007--枫朗收费站--枫朗互通--S68大丰华高速--粤闽界；<br><hr>
+<span id="pro">福建省</span>:闽粤界--S62平梅高速--平和九峰收费站--G355--乌石果蔬有限公司<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -98,7 +98,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">浮箱</div></li>
+                    <div class="detail-value " id="cargoInfo">挖机1台</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">43.45吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
@@ -134,8 +134,8 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
-湖北省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-湖南省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+广东省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+福建省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
