--- a/002.html
+++ b/002.html
@@ -75,17 +75,17 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4200002024110400192</div></li>
+                    <div class="detail-value " id="reqNo">A3600002024112700192 </div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">湖北省,湖南省</div></li>
+				<div class="detail-value " id="passDists">江西省,浙江省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年11月06日16时30分至 2024年11月30日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年11月29日16时30分至 2024年12月10日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">湖北省</span>: 沙市货运城汽修厂--S223--沙市收费站--G50沪渝高速--G55二广高速--鄂湘界；<br><hr>
-<span id="pro">湖南省</span>: 湘鄂界--G55二广高速--津市收费站<br><hr>
+<span id="pro">江西省</span>: 樟树市羽宸汽车维修服务站修理厂--S218--樟树东收费站--S42东昌高速--G60沪昆高速--赣浙界；<br><hr>
+<span id="pro">浙江省</span>: 浙赣界--G60沪昆高速--衢州西收费站--智慧大道--花园西大道--浙江华静工程管理有限公司<br><hr>
 </div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
@@ -99,7 +99,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">推土机</div></li>
+                    <div class="detail-value " id="cargoInfo">机床</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">43.44吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
@@ -123,7 +123,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货总重量：</div>
                     <div class="detail-value " id="totalWeight">60.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
-                    <div class="detail-value " id="totalOutline">27.00 × 3.75× 4.50</div></li>
+                    <div class="detail-value " id="totalOutline">26.00 × 3.75× 4.50</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">轴荷分布：</div>
                     <div class="detail-value " id="axlesLoad">10+20+30</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class=" detail-name-blod">车货总体轮廓图：</div>
@@ -135,8 +135,8 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
-湖北省：<br>交通部门意见:同意通行! <br>公安部门意见:暂无！<br><hr>
-湖南省：<br>交通部门意见:同意通行! <br>公安部门意见:暂无！<br><hr>
+江西省：<br>交通部门意见:同意通行! <br>公安部门意见:暂无！<br><hr>
+浙江省：<br>交通部门意见:同意通行! <br>公安部门意见:暂无！<br><hr>
 </div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
