--- a/042.html
+++ b/042.html
@@ -75,16 +75,16 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4400002024053109151</div></li>
+                    <div class="detail-value " id="reqNo">A4400002024121807598</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
 				<div class="detail-value " id="passDists">广东省，江西省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年06月03日15时30分至 2024年06月30日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年12月20日19时25分至 2024年12月31日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广东省</span>:一顺便利店--G325--水口收费站--G15沈海高速--G1508广州绕城高速--S6广龙高速--G0422武深高速--G45大广高速--粤赣界；<br><hr>
+<span id="pro">广东省</span>:曾田中学--G205--灯塔收费站--G4511龙河高速--G78汕昆高速--G45大广高速--粤赣界；<br><hr>
 <span id="pro">江西省</span>:赣粤界--G45大广高速--全南收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
@@ -98,11 +98,11 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">履带吊</div></li>
+                    <div class="detail-value " id="cargoInfo">挖机</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">43.45吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
-                    <div class="detail-value " id="cargoOutline">13.00 × 3.75 ×3.60</div></li>
+                    <div class="detail-value " id="cargoOutline">16.00 × 3.75 ×3.60</div></li>
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">车辆信息</li> <!-- 车辆信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车车号牌：</div>
@@ -122,7 +122,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货总重量：</div>
                     <div class="detail-value " id="totalWeight">60.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
-                    <div class="detail-value " id="totalOutline">24.00 × 3.75× 4.50</div></li>
+                    <div class="detail-value " id="totalOutline">26.00 × 3.75× 4.50</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">轴荷分布：</div>
                     <div class="detail-value " id="axlesLoad">10+20+30</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class=" detail-name-blod">车货总体轮廓图：</div>
