--- a/042.html
+++ b/042.html
@@ -75,17 +75,17 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4400002024121807598</div></li>
+                    <div class="detail-value " id="reqNo">A4400002024122707598</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">广东省，江西省</div></li>
+				<div class="detail-value " id="passDists">广东省，广西壮族自治区</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年12月20日19时25分至 2024年12月31日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年12月30日16时20分至 2025年01月15日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广东省</span>:曾田中学--G205--灯塔收费站--G4511龙河高速--G78汕昆高速--G45大广高速--粤赣界；<br><hr>
-<span id="pro">江西省</span>:赣粤界--G45大广高速--全南收费站<br><hr></div></li>
+<span id="pro">广东省</span>:珠海市华安丝网有限公司--X589--斗门收费站--S47广佛江珠高速--S32西部沿海高速--S53中山西环高速--S47广佛江珠高速--S20广中江高速--G94珠三角环线高速--G80广昆高速--粤桂界；<br><hr>
+<span id="pro">广西壮族自治区</span>:桂粤界--G80广昆高速--G65包茂高速--梧州西收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -98,7 +98,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">挖机</div></li>
+                    <div class="detail-value " id="cargoInfo">履带</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">43.45吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
@@ -135,7 +135,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
 广东省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-江西省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+广西壮族自治区：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
